# badger-sett

./: .gitignore  Cargo.toml  Readme.md  Rocket.toml  install.sh
.sqlx/: query-0991a51e4b448397a9ee80ddf582b02912054edf205087f0f3b8b8a138856e1b.json  query-a89679d9e2a2a2f5eb473da3660c36f31af4c15055806f4da7ac1db18f879a45.json  query-b900a0e9de2360a664c63da0a05d9c71db8d8cc3c3d0225196e98c0fa47a983d.json  query-c14485637a55defb3b9e33c9482e9e8dad6e3f322b44946c8591b7febab7016b.json
install/: Rocket.toml  badger-sett.service
src/: database.rs  error.rs  main.rs
