[package]
name = "badger-den"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
