[package]
name = "badger-sett"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"       # remove when ready to deploy

[dependencies]
hex = "0.4.3"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "1.0.0-beta", features = ["from"] }

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
